@@ -17,6 +17,8 @@ Version 1.4.9 - CVS
   - Added Courier IMAP OUTBOX check to configtest utility.
   - If mailbox name starts with slash or contains ../, error message is 
     generated. Safety check for insecure default UW IMAP setup (#1557078).
+  - Ignore message copy errors when messages are deleted. Allows to delete
+    messages when quota is exceeded. (#614887) (#646386) (#1446026)
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
